feat(results): add new styles

--- a/src/app/features/homepage/results/results.component.scss
+++ b/src/app/features/homepage/results/results.component.scss
@@ -1,4 +1,66 @@
+.container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.filters-card {
+    min-width: 240px;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+    padding: 1.25rem 1rem;
+    background-color: hsl(var(--clr-blue-dark), .8);
+}
+
+.mat-divider {
+    border-color: hsl(var(--clr-white), .5)
+}
+
 .filters__selects {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    gap: .7rem;
+}
+
+.reset-filters-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5em;
+    background-color: transparent;
+    padding: 0;
+    border: 0;
+    width: fit-content;
+    align-self: flex-end;
+    color: hsl(var(--clr-white));
+    margin-top: 1em;
+
+    .mat-icon {
+        color: hsl(var(--clr-white));
+    }
+}
+
+.pagination {
+    .circle-button {
+        --padding: .25em;
+    }
+
+    .mat-icon {
+        color: hsl(var(--clr-white));
+    }
+}
+
+.posts-grid {
+    margin-top: .7rem;
+    display: grid;
+    gap: .5rem;
+}
+
+@media (min-width: 48rem) {
+    .posts-grid {
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    }
 }
