--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
 
     <!-- Desktop navbar -->
     <nav class="navbar" *ngIf="isDesktop">
-        <ul class="navbar__list fs-small fw-700">
+        <ul class="navbar__list fs-regular fw-700">
             <li>
                 <a class="rounded-button box-shadow-2" [routerLink]="['/tops']">
                     <mat-icon>local_fire_department</mat-icon>
