--- a/src/app/features/homepage/results/results.component.html
+++ b/src/app/features/homepage/results/results.component.html
@@ -1,66 +1,152 @@
-<div class="filters-card">
-  <div class="filters__search">
-    <input type="search" [formControl]="searchControl" placeholder="Buscar" (keyup.enter)="doSearch(1)">
-    <!-- <button *ngIf="searchControl.value" mat-icon-button aria-label="Clear" (click)="clearSearchControl()">
-      <mat-icon>close</mat-icon>
-    </button> -->
-  </div>
+<div class="container">
+  <aside class="filters-card rounded-card" *ngIf="isDesktop">
+    <!-- Desktop searchbar -->
+    <div class="rounded-search-bar box-shadow-2">
+      <input type="search" [formControl]="searchControl" placeholder="Buscar" (keyup.enter)="doSearch(1)">
+      <button *ngIf="searchControl.value" mat-icon-button (click)="clearSearchControl()">
+        <mat-icon>close</mat-icon>
+      </button>
+      <button *ngIf="!searchControl.value" mat-icon-button (click)="doSearch(1)">
+        <mat-icon>search</mat-icon>
+      </button>
+    </div>
 
-  <div class="filters__selects">
-    <app-rounded-select
-      baseText="Nivel Académico"
-      [control]="academicLevelControl"
-      [options]="academicLevelsList"
-      [resetButton]="true"
-      [loading]="isAcademicLevelsLoading">
-    </app-rounded-select>
-    <app-rounded-select
-      baseText="Eje"
-      [control]="axisControl"
-      [hasGroups]="true"
-      [options]="subjectWithAxis"
-      [searchInput]="true"
-      searchPlaceholder="Busca un eje o asignatura"
-      [resetButton]="true"
-      [loading]="isAxesLoading">
-    </app-rounded-select>
-    <app-rounded-select
-      baseText="Asignatura"
-      [control]="subjectControl"
-      [options]="subjectList"
-      [searchInput]="true"
-      searchPlaceholder="Busca una asignatura"
-      [resetButton]="true"
-      [loading]="isSubjectsLoading">
-    </app-rounded-select>
-    <app-rounded-select
-      baseText="Ordenar por"
-      [control]="orderingControl"
-      [options]="orderingList">
-    </app-rounded-select>
+    <mat-divider></mat-divider>
+  
+    <!-- Desktop filters -->
+    <div class="filters__selects">
+      <app-rounded-select
+        class="box-shadow-2"
+        baseText="Nivel Académico"
+        [control]="academicLevelControl"
+        [options]="academicLevelsList"
+        [resetButton]="true"
+        [loading]="isAcademicLevelsLoading">
+      </app-rounded-select>
+      <app-rounded-select
+        class="box-shadow-2"
+        baseText="Eje"
+        [control]="axisControl"
+        [hasGroups]="true"
+        [options]="subjectWithAxis"
+        [searchInput]="true"
+        searchPlaceholder="Busca un eje o asignatura"
+        [resetButton]="true"
+        [loading]="isAxesLoading">
+      </app-rounded-select>
+      <app-rounded-select
+        class="box-shadow-2"
+        baseText="Asignatura"
+        [control]="subjectControl"
+        [options]="subjectList"
+        [searchInput]="true"
+        searchPlaceholder="Busca una asignatura"
+        [resetButton]="true"
+        [loading]="isSubjectsLoading">
+      </app-rounded-select>
+      <app-rounded-select
+        class="box-shadow-2"
+        baseText="Ordenar por"
+        [control]="orderingControl"
+        [options]="orderingList">
+      </app-rounded-select>
+  
+      <button class="reset-filters-button" *ngIf="showRemoveFilters" (click)="clearFilterControls()">
+        <mat-icon class="small-icon">delete</mat-icon>
+        <span class="fw-600">Borrar filtros</span>
+      </button>
+    </div>
+  </aside>
+  
+  <div>
+    <div class="fs-small flex-space_between-center flex-wrap gap-025">
+      <!-- Filter tags -->
+      <div class="flex-start-center gap-05 flex-wrap">
+        <button class="rounded-button-academic-level box-shadow-1">
+          <span>6to Básico</span>
+          <mat-icon class="small-icon">close</mat-icon>
+        </button>
+        <button class="rounded-button-axis box-shadow-1">
+          <span>Lectura</span>
+          <mat-icon class="small-icon">close</mat-icon>
+        </button>
+        <button class="rounded-button-subject box-shadow-1">
+          <span>Lenguaje y comunicación</span>
+          <mat-icon class="small-icon">close</mat-icon>
+        </button>
+        <button class="rounded-button-slim box-shadow-1">
+          <span>Más recientes</span>
+          <mat-icon class="small-icon">close</mat-icon>
+        </button>
+      </div>
+    
+      <!-- Paginations -->
+      <div class="pagination flex-space_between-center gap-05">
+        <span class="fw-700">1 - 10 de 24</span>
+        <div class="flex-center-center gap-025">
+          <button class="circle-button">
+            <mat-icon class="small-icon">navigate_before</mat-icon>
+          </button>
+          <button class="circle-button">
+            <span class="fs-small fw-700">12</span>
+          </button>
+          <button class="circle-button">
+            <mat-icon class="small-icon">navigate_next</mat-icon>
+          </button>
+        </div>
+      </div>
+    </div>
 
-    <button *ngIf="showRemoveFilters" (click)="clearFilterControls()">
-      <mat-icon>delete</mat-icon>
-      <span>Borrar filtros</span>
-    </button>
+    <!-- Post grid -->
+    <section class="posts-grid">
+      <div class="rounded-card flex-column gap-1" *ngFor="let el of [1,1,1,1,1]">
+        <div class="flex-space_between-center">
+          <p>Macarena pia torres gamboa - hace 2 meses</p>
+          <mat-icon class="text-blue-dark">more_vert</mat-icon>
+        </div>
+  
+        <div>
+          <h2>Radioteatro (Narrador y personaje)</h2>
+          <p>Analizar relatos de terror en radioteatro e identificar la voz de los personajes. Se adjunta clase pdf y guión de radioteatro Dr. Mortis "Un loco anda suelto" Escuchar en youtube https://www.youtube.com/watch?v=ctR5p4XOoAw La guerra de los mundos radioteatro</p>
+        </div>
+  
+        <div class="flex-space_between-center flex-wrap gap-025">
+          <div class="flex-center-center gap-025">
+            <mat-icon class="text-blue-dark">description</mat-icon>
+            <span class="fw-600">4 Documentos</span>
+          </div>
+  
+          <div class="flex-wrap gap-025">
+            <span class="small-border-tag-red">.pdf</span>
+            <span class="small-border-tag-blue">.doc</span>
+            <span class="small-border-tag-green">.xls</span>
+            <span class="small-border-tag-orange">.ppt</span>
+          </div>
+        </div>
+  
+        <div class="flex-wrap gap-025">
+          <span class="rounded-button-academic-level">Nivel académico: 6to básico</span>
+          <span class="rounded-button-axis">Eje: Lectura</span>
+          <span class="rounded-button-subject">Asignatura: Lenguaje y comunicación</span>
+        </div>
+  
+        <div class="flex-space_between-center">
+          <div class="flex-center-center gap-1">
+            <div class="flex-center-center gap-025">
+              <mat-icon class="small-icon text-blue-dark">favorite_outline</mat-icon>
+              <span class="fw-600">3 Me gusta</span>
+            </div>
+            <div class="flex-center-center gap-025">
+              <mat-icon class="small-icon text-blue-dark">visibility</mat-icon>
+              <span class="fw-600">3 Visualizaciones</span>
+            </div>
+          </div>
+  
+          <mat-icon class="text-red">favorite_outline</mat-icon>
+          <!-- <mat-icon class="text-red">favorite</mat-icon> -->
+        </div>
+      </div>
+    </section>
   </div>
 </div>
-
-
-
-<!-- Bottom pagination -->
-<!-- <div class="pagination flex_justify_center" *ngIf="hasData && !isLoading && (!!pageInfo?.next || !!pageInfo?.previous)">
-  <button mat-raised-button class="pagination-button" (click)="previousPage()" [disabled]="!pageInfo?.previous || isLoading">
-    <mat-icon>navigate_before</mat-icon>
-  </button>
-  <button mat-raised-button class="pagination-button pagination-number" [matMenuTriggerFor]="pagesMenu" [disabled]="isLoading">
-    {{ searchParams.page }}
-  </button>
-  <mat-menu #pagesMenu>
-    <button mat-menu-item *ngFor="let item of [].constructor(maxPage); let i = index" (click)="doSearch(i+1)">{{ i+1 }}</button>
-  </mat-menu>
-  <button mat-raised-button class="pagination-button" (click)="nextPage()" [disabled]="!pageInfo?.next || isLoading">
-    <mat-icon>navigate_next</mat-icon>
-  </button>
-</div> -->
   
