--- a/src/app/shared/components/rounded-select/rounded-select.component.scss
+++ b/src/app/shared/components/rounded-select/rounded-select.component.scss
@@ -8,4 +8,13 @@
     justify-content: space-between;
     --p-y: .7em;
     --p-x: 1em;
+    
+    > span {
+        white-space: nowrap;
+        overflow-x: hidden;
+    }
+
+    > .mat-icon {
+        min-width: fit-content;
+    }
 }
