fix(rounded-select): remove old components

--- a/src/app/features/posts/user-posts/user-posts.component.html
+++ b/src/app/features/posts/user-posts/user-posts.component.html
@@ -14,7 +14,7 @@
                 </button>
             </div>
     
-            <div class="flex_column gap-05">
+            <!-- <div class="flex_column gap-05">
                 <app-rounded-select-search
                     class="filter"
                     [list]="academicLevelsList"
@@ -63,7 +63,7 @@
                     (click)="clearFilterControls()">
                     <mat-icon>delete</mat-icon>
                 </button>
-            </div>
+            </div> -->
         </div>
 
         <!-- Stats -->
