feat(navbar): add logo styles

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     </button>
 
     <a class="logo text-blue-dark" [routerLink]="['/']">
-        <span>📖</span>
+        <img src="/assets/images/main-icon.png" alt="Ícono de Planishare">
         <span>Plansihare</span>
     </a>
 
