--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -14,6 +14,11 @@
     align-items: center;
     font-size: var(--fs-large);
     font-weight: 800;
+    gap: .3em;
+
+    img {
+        max-height: var(--fs-large);
+    }
 }
 
 .navbar__list {
