--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,17 @@
 .loader {
-    height: 100%;
+    height: 100vh;
     
     display: grid;
     place-items: center;
 
-    // background-color: var(--purple-light);
+    // background-image: url('/assets/images/bg1-425x756.jpg');
+    // background-size: cover;
+    // background-attachment: fixed;
+    // background-position: bottom center;
 }
+
+// @media (min-width: 48rem) {
+//     .loader {
+//         background-image: url('/assets/images/bg1-1920x1080.jpg');
+//     }
+// }
