--- a/src/assets/styles/design/_colors.scss
+++ b/src/assets/styles/design/_colors.scss
@@ -19,6 +19,7 @@
     --clr-yellow-light: 44, 67%, 86%; //#F3E6C3
 
     --clr-white: 0, 0%, 100%; //#FFFFFF
+    --clr-white-98: 0, 0%, 98%;
     --clr-black: 0, 0%, 13%; //#222222
 
     // Variable colors
