--- a/src/assets/styles/design/_components.scss
+++ b/src/assets/styles/design/_components.scss
@@ -2,7 +2,7 @@
 .rounded-button,
 .rounded-button-slim {
     // Button and link reset
-    border: none;
+    border: 0px solid transparent;
     text-decoration: none;
 
     display: inline-flex;
