--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,73 +1,76 @@
-<header class="header container">
-    <button mat-icon-button (click)="openSidenav()" *ngIf="!isDesktop">
-        <mat-icon>menu</mat-icon>
-    </button>
+<header class="header" [ngClass]="{'header_on-scroll': onScroll}">
+    <div class="container">
 
-    <a class="logo text-blue-dark" [routerLink]="['/']">
-        <img src="/assets/images/main-icon.png" alt="Ícono de Planishare">
-        <span>Plansihare</span>
-    </a>
-
-    <a mat-icon-button *ngIf="!isDesktop" [routerLink]="['/user/edit-profile']">
-        <mat-icon>person</mat-icon>
-    </a>
-
-    <!-- Desktop navbar -->
-    <nav class="navbar" *ngIf="isDesktop">
-        <ul class="navbar__list fs-regular fw-700">
-            <li>
-                <a class="rounded-button box-shadow-2" [routerLink]="['/tops']">
-                    <mat-icon>local_fire_department</mat-icon>
-                    <span>Tops</span>
-                </a>
-            </li>
-            <li *ngIf="!isUserAuth">
-                <a class="rounded-button box-shadow-2" [routerLink]="['/auth/register']">
-                    <mat-icon>person_add</mat-icon>
-                    <span>Registrarse</span>
-                </a>
-            </li>
-            <li *ngIf="!isUserAuth">
-                <a class="rounded-button box-shadow-2" [routerLink]="['/auth/login']">
-                    <mat-icon>login</mat-icon>
-                    <span>Iniciar Sesión</span>
-                </a>
-            </li>
-            <li *ngIf="isUserAuth">
-                <a class="rounded-button box-shadow-2" [routerLink]="['/posts/user']">
-                    <mat-icon>description</mat-icon>
-                    <span>Mis publicaciones</span>
-                </a>
-            </li>
-            <li *ngIf="isUserAuth">
-                <a class="rounded-button box-shadow-2" [routerLink]="['/posts/create']">
-                    <mat-icon>control_point</mat-icon>
-                    <span>Crear publicación</span>
-                </a>
-            </li>
-            <li>
-                <a class="rounded-button box-shadow-2" [routerLink]="['/results']">
-                    <mat-icon>search</mat-icon>
-                    <span>Buscar</span>
-                </a>
-            </li>
-            <li *ngIf="isUserAuth">
-                <button class="circle-button box-shadow-2"
-                    [matMenuTriggerFor]="menu"
-                    aria-label="Menu de perfil">
-                        <mat-icon>person</mat-icon>
-                </button>
-                <mat-menu #menu="matMenu">
-                    <button mat-menu-item [routerLink]="['/user/edit-profile']">
-                      <mat-icon>person</mat-icon>
-                      <span>Mi perfil</span>
+        <button mat-icon-button (click)="openSidenav()" *ngIf="!isDesktop">
+            <mat-icon>menu</mat-icon>
+        </button>
+    
+        <a class="logo text-blue-dark" [routerLink]="['/']">
+            <img src="/assets/images/main-icon.png" alt="Ícono de Planishare">
+            <span>Plansihare</span>
+        </a>
+    
+        <a mat-icon-button *ngIf="!isDesktop" [routerLink]="['/user/edit-profile']">
+            <mat-icon>person</mat-icon>
+        </a>
+    
+        <!-- Desktop navbar -->
+        <nav *ngIf="isDesktop">
+            <ul class="navbar__list fs-regular fw-700">
+                <li>
+                    <a class="rounded-button box-shadow-2" [routerLink]="['/tops']">
+                        <mat-icon>local_fire_department</mat-icon>
+                        <span>Tops</span>
+                    </a>
+                </li>
+                <li *ngIf="!isUserAuth">
+                    <a class="rounded-button box-shadow-2" [routerLink]="['/auth/register']">
+                        <mat-icon>person_add</mat-icon>
+                        <span>Registrarse</span>
+                    </a>
+                </li>
+                <li *ngIf="!isUserAuth">
+                    <a class="rounded-button box-shadow-2" [routerLink]="['/auth/login']">
+                        <mat-icon>login</mat-icon>
+                        <span>Iniciar Sesión</span>
+                    </a>
+                </li>
+                <li *ngIf="isUserAuth">
+                    <a class="rounded-button box-shadow-2" [routerLink]="['/posts/user']">
+                        <mat-icon>description</mat-icon>
+                        <span>Mis publicaciones</span>
+                    </a>
+                </li>
+                <li *ngIf="isUserAuth">
+                    <a class="rounded-button box-shadow-2" [routerLink]="['/posts/create']">
+                        <mat-icon>control_point</mat-icon>
+                        <span>Crear publicación</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="rounded-button box-shadow-2" [routerLink]="['/results']">
+                        <mat-icon>search</mat-icon>
+                        <span>Buscar</span>
+                    </a>
+                </li>
+                <li *ngIf="isUserAuth">
+                    <button class="circle-button box-shadow-2"
+                        [matMenuTriggerFor]="menu"
+                        aria-label="Menu de perfil">
+                            <mat-icon>person</mat-icon>
                     </button>
-                    <button mat-menu-item (click)="logout()">
-                      <mat-icon>logout</mat-icon>
-                      <span>Cerrar sesión</span>
-                    </button>
-                </mat-menu>
-            </li>
-        </ul>
-    </nav>
+                    <mat-menu #menu="matMenu">
+                        <button mat-menu-item [routerLink]="['/user/edit-profile']">
+                          <mat-icon>person</mat-icon>
+                          <span>Mi perfil</span>
+                        </button>
+                        <button mat-menu-item (click)="logout()">
+                          <mat-icon>logout</mat-icon>
+                          <span>Cerrar sesión</span>
+                        </button>
+                    </mat-menu>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
