--- a/src/assets/styles/design/_components.scss
+++ b/src/assets/styles/design/_components.scss
@@ -13,8 +13,8 @@
 
     color: var(--text-color, hsl(var(--clr-white)));
     background-color: var(--bg-color, hsl(var(--clr-blue-dark)));
-    padding-inline: var(--p-x, 1.5em);
-    padding-block: var(--p-y, .75em);
+    padding-inline: var(--p-x, 1em);
+    padding-block: var(--p-y, .7em);
 
     > .mat-icon {
         height: 100%;
@@ -22,16 +22,22 @@
     }
 }
 
-@media (max-width: calc(48rem - 1px)) {
-    .rounded-button {
-        padding-inline: var(--p-x, 1em);
-        padding-block: var(--p-y, .7em);
-    }
+.rounded-button-slim {
+    gap: .2em;
+    padding: .2em .5em;
+    font-weight: 600;
 }
 
-.rounded-button-slim {
-    padding: .35em 1em;
-    font-weight: 600;
+@media (min-width: 48rem) {
+    .rounded-button {
+        padding-inline: var(--p-x, 1.5em);
+        padding-block: var(--p-y, .75em);
+    }
+
+    .rounded-button-slim {
+        padding: .35em 1em;
+        font-weight: 600;
+    }
 }
 
 .circle-button {
