fix(main-layout): use grid instead flex

--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container>
     <mat-sidenav-content>
         <app-navbar id="navbar"></app-navbar>
-        <main id="main-content">
+        <main>
             <router-outlet></router-outlet>
         </main>
     </mat-sidenav-content>
