--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -8,8 +8,8 @@
     background-attachment: fixed;
     background-position: bottom center;
 
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: min-content 1fr;
     gap: .25rem;
 
     min-height: 100vh;
@@ -18,13 +18,6 @@
 #navbar {
     position: sticky;
     top: 0;
-    justify-self: flex-start;
-}
-
-#main-content {
-    flex-grow: 1;
-    display: flex;
-    margin-inline: auto;
 }
 
 .mat-sidenav {
