fix(results-list): fix card width

--- a/src/app/features/results/results-list/results-list.component.html
+++ b/src/app/features/results/results-list/results-list.component.html
@@ -58,7 +58,7 @@
     </div>
   </aside>
   
-  <div>
+  <div class="main-content">
     <div class="fs-small flex-end-center flex-wrap gap-05">
       <button class="filters-button rounded-button-slim box-shadow-1" *ngIf="!this.isDesktop">
         <span>Filtros y búsqueda</span>
