--- a/src/app/features/results/results-list/results-list.component.scss
+++ b/src/app/features/results/results-list/results-list.component.scss
@@ -50,6 +50,10 @@
     margin-inline: auto;
 }
 
+.main-content {
+    flex-grow: 1;
+}
+
 .filter-tags {
     flex-grow: 1;
 }
@@ -78,6 +82,6 @@
 
 @media (min-width: 48rem) {
     .posts-grid {
-        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     }
 }
