refactor(main-layout): remove main tag

--- a/src/app/features/homepage/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div class="hero container">
+<main class="hero container">
   <div class="hero__text">
     <h1 class="fs-xx-large fw-600 text-blue-dark text-shadow-1">Busca y comparte planificaciones de enseñanza básica</h1>
     <a class="rounded-button fs-medium fw-600 box-shadow-2" [routerLink]="['/', 'results']">
@@ -12,4 +12,4 @@
       <img src="/assets/images/homepage_hero-mobile.png" alt="Ilustración compartiendo archivos">
     </picture>
   </div>
-</div>
+</main>
