--- a/src/app/features/results/results-list/results-list.component.html
+++ b/src/app/features/results/results-list/results-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<main class="container">
   <aside class="filters-card rounded-card" *ngIf="isDesktop">
     <!-- Desktop searchbar -->
     <div class="rounded-search-bar box-shadow-2">
@@ -163,5 +163,4 @@
       </div>
     </section>
   </div>
-</div>
-  
+</main>
