--- a/src/assets/styles/helpers/_display.scss
+++ b/src/assets/styles/helpers/_display.scss
@@ -30,6 +30,10 @@
     align-items: center;
 }
 
+.flex-space_between {
+    justify-content: space-between;
+}
+
 .flex-column {
     flex-direction: column;
 }
